# semanticseek3

./: .env.example  .gitignore  CLAUDE.md  COMMANDS.md  JUHO_UPGRADE_GUIDE.md  Makefile  README.md  alternate_approach.py  bonmker.py  imgonnaprovetheembeddingsaregarbage.py  otherdebugtool.py  pyproject.toml  refresh_all.py  requirements.txt  semantic_seek_v_3.md  semanticseek.py  similarity.py  similarity_v2.py  sus_af.py  translator.py  translator_v2.py  walker.py
.similarity_cache/: intfloat_multilingual-e5-base_bundle.json  sentence-transformers_paraphrase-multilingual-MiniLM-L12-v2_bundle.json
configs/: settings.yaml
data/en/: categories_en.json
data/fi/: categories_fi.json
docs/: BEFORE_AFTER_COMPARISON.md  CHANGES.md  CLEANUP_SUMMARY.md  MODEL_ANALYSIS.md  README_MODEL_UPGRADE.md  semantic_seek_v_3.md
examples/: game_demo.py
experiment_slop/: test_embeddings.py
similarivenv/: pyvenv.cfg
similarivenv/Scripts/: activate  activate.bat
src/: __init__.py
src/cli/: app.py
src/core/: __init__.py  data.py  engine.py  index.py  model.py  scoring.py
src/web/: __init__.py  api.py
tests/: __init__.py  test_data.py  test_engine.py  test_scoring.py
tools/: build_index.py  calibrate_thresholds.py  similarity.py  validate_data.py
