[project]
name = "semantic-seek"
version = "3.0.0"
description = "Semantic Seek word similarity game"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "typer>=0.12.5",
    "pydantic>=2.8.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "hnswlib>=0.8.0",
    "sentence-transformers>=3.1.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
